WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69188
StringRecursionChecker should not work in terms of EncodedJSValue
https://bugs.webkit.org/show_bug.cgi?id=69188
Summary
StringRecursionChecker should not work in terms of EncodedJSValue
Gavin Barraclough
Reported
2011-09-30 16:52:52 PDT
0 is not the empty value on 32_64. Code that casts literals to EncodedJSValues may be unsafe if we change our internal representation.
Attachments
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2011-09-30 16:53:49 PDT
Fixed in
r96438
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug